--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "format": "yarn run format:js",
+    "lint": "yarn lint:js && yarn lint:style",
+    "lint:js": "next lint",
+    "lint:style": "stylelint --fix '**/*.css'",
+    "format": "yarn format:js",
     "format:js": "prettier --write --ignore-path .gitignore './**/*.{js,jsx,ts,tsx,json,css}'",
     "test": "jest"
   },
@@ -21,7 +23,11 @@
     "@types/react": "17.0.33",
     "eslint": "7",
     "eslint-config-next": "12.0.1",
+    "eslint-config-prettier": "^8.3.0",
     "prettier": "^2.4.1",
+    "stylelint": "^14.0.1",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-standard": "^23.0.0",
     "typescript": "4.4.4"
   }
 }
