--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint:style": "stylelint --fix '**/*.css'",
     "format": "yarn format:js",
     "format:js": "prettier --write --ignore-path .gitignore './**/*.{js,jsx,ts,tsx,json,css}'",
-    "test": "jest"
+    "test": "jest",
+    "postinstall": "husky install"
   },
   "dependencies": {
     "next": "12.0.1",
@@ -24,10 +25,18 @@
     "eslint": "7",
     "eslint-config-next": "12.0.1",
     "eslint-config-prettier": "^8.3.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^11.2.6",
     "prettier": "^2.4.1",
     "stylelint": "^14.0.1",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-standard": "^23.0.0",
     "typescript": "4.4.4"
+  },
+  "lint-staged": {
+    "*.@(ts|tsx)": [
+      "yarn lint",
+      "yarn format"
+    ]
   }
 }
