--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,5 +8,11 @@ services:
     volumes:
       - .:/app:cached
       - node_modules:/app/node_modules:cached
+
+  plantuml:
+    image: plantuml/plantuml-server:jetty
+    ports:
+      - 8080:8080
+
 volumes:
   node_modules:
