gitignoreにgeneratedディレクトリを追加

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,6 @@ yarn-error.log*
 
 # docker環境にて、秘匿情報などコミットしたくない環境変数を設定したい際などに使う。
 docker-compose.override.yml
+
+src/generated/**
+!src/generated/.keep
