--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test:compile": "tsc",
     "start": "next start",
     "lint": "yarn lint:js && yarn lint:style",
-    "lint:js": "next lint",
+    "lint:js": "next lint --fix",
     "lint:style": "stylelint --fix '**/*.css'",
     "format": "yarn format:js",
     "format:js": "prettier --write --ignore-path .gitignore './**/*.{js,jsx,ts,tsx,json,css}'",
@@ -27,6 +27,7 @@
     "eslint": "7",
     "eslint-config-next": "12.0.7",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "prettier": "^2.5.1",
     "stylelint": "^14.2.0",
     "stylelint-config-prettier": "^9.0.3",
