--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "build": "next build",
     "test:compile": "tsc",
     "start": "next start",
-    "lint": "yarn lint:js && yarn lint:style",
+    "lint": "yarn lint:js",
     "lint:js": "next lint --fix",
-    "lint:style": "stylelint --fix '**/*.css'",
     "format": "yarn format:js",
     "format:js": "prettier --write --ignore-path .gitignore './**/*.{js,jsx,ts,tsx,json,css}'",
     "test": "jest"
@@ -29,9 +28,6 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-unused-imports": "^2.0.0",
     "prettier": "^2.5.1",
-    "stylelint": "^14.2.0",
-    "stylelint-config-prettier": "^9.0.3",
-    "stylelint-config-standard": "^24.0.0",
     "typescript": "4.5.4"
   }
 }
