--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@typescript-eslint/eslint-plugin": "^5.45.1",
     "@typescript-eslint/parser": "^5.45.1",
     "babel-loader": "^9.1.0",
+    "dependency-cruiser": "^12.1.0",
     "eslint": "8",
     "eslint-config-next": "13.0.6",
     "eslint-config-prettier": "^8.5.0",
